attempt fix on nav alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,9 @@ nav {
     position: sticky;
     top: 10px;
     z-index: 100;
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .navigation {
@@ -51,7 +53,6 @@ nav {
 
 .navigation ul {
     display: flex;
-    
     padding: 5px 0 5px 0;
     list-style-type: none;
 }
@@ -307,7 +308,7 @@ td {
 
     .section {
         width: 90%;
-        background-color: green;
+        background-color: red;
     }
 }
 
